fix: add flex-wrap for flex row

--- a/SaRLAB/SaRLAB.UserWeb/wwwroot/css/home.css
+++ b/SaRLAB/SaRLAB.UserWeb/wwwroot/css/home.css
@@ -1385,6 +1385,7 @@ Banner Style
 
     .detail-container-user .d-flex {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .detail-container .detail-action {
@@ -1409,6 +1410,7 @@ Banner Style
 
     .edit-container-user .d-flex {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 }
  
